gk/policy/tests/control-plane-disallowed.yaml
apiVersion: machine.openshift.io/v1beta1
kind: Machine
metadata:
  labels:
    machine.openshift.io/cluster-api-cluster: cluster-4pffb
    machine.openshift.io/cluster-api-machine-role: master
    machine.openshift.io/cluster-api-machine-type: master
    machine.openshift.io/instance-type: Standard_D8s_v3
    machine.openshift.io/region: eastus
    machine.openshift.io/zone: "1"
  name: cluster-4pffb-master-0
  namespace: openshift-machine-api
